--- a/quiz.html
+++ b/quiz.html
@@ -8,12 +8,14 @@
 
     <body>
         <div class="container">
-            <svg id="svg-canvas" viewBox = "0 0 500 300"  xmlns="http://www.w3.org/2000/svg">
-                <circle cx="0%" cy="0%" r="50" />
-                <circle cx="100%" cy="0%" r="50"/>
-                <circle cx="100%" cy="100%" r="50"/>
-                <circle cx="0%" cy="100%" r="50"/>
+            <svg id="svg-canvas" viewBox = "0 0 800 450"  xmlns="http://www.w3.org/2000/svg">
+                <circle cx="0%" cy="0%" r="60" />
+                <circle cx="100%" cy="0%" r="60"/>
+                <circle cx="100%" cy="100%" r="60"/>
+                <circle cx="0%" cy="100%" r="60"/>
                 <rect x="50%" y="50%" width="50" height="30" fill="blue"/>
+
+                <text x="30%" y="20%" font-family="Verdana" font-size="30">Responsive web design</text>
             </svg>
 
         </div>
